fix: change header z-index to be greater than btn
The z-index of header and formbtn were previously 1
This was causing formbtn to be on top of header

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -62,7 +62,7 @@ header {
   padding: var(--section-title-padding);
   background-color: #eff6ff;
   position: sticky;
-  z-index: 1;
+  z-index: 2;
   top: 0;
 }
 
